--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
     <p>Curated by <strong>Jaydaplug</strong> for <a href="https://www.madeoftech.net" target="_blank" style="color: white; text-decoration: underline;">Made of Tech</a></p>
   </header>
 
+  
   <nav id="navbar"></nav>
   <main id="tabContainer"></main>
 
+  <div id="contact-buttons" style="position: fixed; bottom: 20px; right: 20px; display: flex; flex-direction: column; gap: 10px; z-index: 999;">
+  <!-- WhatsApp Button -->
+  <a href="https://wa.me/254702250123?text=Hi%20Jaydaplug%20from%20Made%20of%20Tech!%20I%20want%20to%20know%20more%20about%20nature%20photography%20sites." target="_blank" style="background-color: #25D366; color: white; padding: 12px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.3);">
+    📱 Chat on WhatsApp
+  </a>
+
+  <!-- Email Button -->
+  <a href="mailto:innocent@madeoftech.net?subject=Nature%20Photography%20Sites&body=Hi%20Jaydaplug,%20I%20have%20a%20question%20about%20photography%20sites..." style="background-color: #EA4335; color: white; padding: 12px 20px; border-radius: 50px; text-decoration: none; font-weight: bold; box-shadow: 0 2px 5px rgba(0,0,0,0.3);">
+    📧 Email Me
+  </a>
+  </div>
   <footer>
     <p>© 2025 Made of Tech — Powered by Jaydaplug</p>
   </footer>
